# Pr-ctica

./: a.out
countingas/: countingas  countingas.cc
ej1/: CMakeLists.txt  fullprogram.txt  main.cc
ej1/include/: scalar_functions.h
ej1/src/: scalar_functions.cc
ej2/: capitalize_vowels  capitalize_vowels.cc
ej3/: polynomial  polynomial.cc
ej4/: approximateroot  approximateroot.cc
ej5/: hypothenuse  hypothenuse.cc
increasingnumbers/: increasingnumbers  increasingnumbers.cc
printaline/: printaline.cc
